[gd_scene load_steps=14 format=2]

[ext_resource path="res://scene/Cells/Cells.gd" type="Script" id=1]
[ext_resource path="res://assets/cells/infectedcells/infected_01.png" type="Texture" id=2]
[ext_resource path="res://assets/cells/infectedcells/infected_02.png" type="Texture" id=3]
[ext_resource path="res://assets/cells/infectedcells/infected_03.png" type="Texture" id=4]
[ext_resource path="res://assets/cells/infectedcells/infected_04.png" type="Texture" id=5]
[ext_resource path="res://assets/cells/infectedcells/infected_05.png" type="Texture" id=6]
[ext_resource path="res://assets/cells/infectedcells/infected_06.png" type="Texture" id=7]
[ext_resource path="res://assets/cells/infectedcells/infected_07.png" type="Texture" id=8]
[ext_resource path="res://assets/cells/infectedcells/infected_08.png" type="Texture" id=9]
[ext_resource path="res://Healthbar.tscn" type="PackedScene" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 79.7839

[sub_resource type="CircleShape2D" id=2]
radius = 13.2416

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "infected",
"speed": 5.0
} ]

[node name="Cells" type="KinematicBody2D"]
input_pickable = true
collision_layer = 64
collision_mask = 65
script = ExtResource( 1 )

[node name="Cells" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cells"]
position = Vector2( -1.47021, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 3 )

[node name="Update" type="Timer" parent="."]
process_mode = 0
wait_time = 0.11
autostart = true

[node name="Healthbar" parent="." instance=ExtResource( 10 )]
margin_left = -51.4357
margin_top = -31.9213
margin_right = -51.4357
margin_bottom = -31.9213
[connection signal="input_event" from="." to="." method="_on_Cells_input_event"]
[connection signal="mouse_exited" from="." to="." method="_on_Cells_mouse_exited"]
[connection signal="area_entered" from="Cells" to="." method="_on_Cells_area_entered"]
[connection signal="timeout" from="Update" to="." method="_on_Update_timeout"]
